--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,16 @@
-@import './reset';
+@use 'base/reset';
+@use 'settings/variables';
+@use 'base/typography';
 
 body {
-  background-color: #f5f5f5;
-  color: #333;
+  background-color: variables.$colorWhite;
+  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='50' height='50'><circle cx='25' cy='25' r='1.5' fill='%23333'/></svg>");
+  background-repeat: repeat;
+  background-size: 35px 35px;
+}
+
+.container {
+  margin: 0 auto;
+  width: 90%;
+  max-width: 1200px;
 }
