add color variables for main header styling

--- a/src/styles/settings/_variables.scss
+++ b/src/styles/settings/_variables.scss
@@ -1,4 +1,5 @@
-$colorPrimary: #404049;
+$colorPrimary: hsl(240, 7%, 27%);
+$colorPrimaryLight: hsl(240, 7%, 32%);
 $colorWhite: #fff;
 
 $fontPrimary: "Instrument Sans", sans-serif;
