--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -4,3 +4,9 @@ body {
   color: variables.$colorPrimary;
   font-family: "Instrument Sans", sans-serif;
 }
+
+h1 {
+  font-size: 60px;
+  font-weight: 500;
+  letter-spacing: -0.02em;
+}
