--- a/src/components/CodeBlock/CodeBlock.scss
+++ b/src/components/CodeBlock/CodeBlock.scss
@@ -7,11 +7,39 @@
   box-shadow: 0px 1.5px 0px 2px $colorPrimary;
   -webkit-box-shadow: 0px 1.5px 0px 2px $colorPrimary;
   -moz-box-shadow: 0px 1.5px 0px 2px $colorPrimary;
-  padding: 35px 55px 30px 35px;
+  padding: 35px 35px 30px 35px;
   position: relative;
+  min-width: 360px;
+
+  .code-block__btn {
+    opacity: 90%;
+    position: absolute;
+    top: 13px;
+    right: 15px;
+  }
+
+  &.code-block--dark {
+    color: $colorWhite;
+    background-color: $colorPrimaryDark;
+    box-shadow: 0px 1.5px 0px 2px $colorPrimaryDark;
+    -webkit-box-shadow: 0px 1.5px 0px 2px $colorPrimaryDark;
+    -moz-box-shadow: 0px 1.5px 0px 2px $colorPrimaryDark;
+
+    .code-block__btn {
+      opacity: 100%;
+      color: $colorPrimaryDark;
+      background-color: $colorWhite;
+
+      &:hover {
+        opacity: 90%;
+        color: $colorWhite;
+        background-color: $colorPrimaryDark;
+        border-color: $colorWhite;
+      }
+    }
+  }
 
   .code-block__label {
-    opacity: 80%;
     font-size: 11.5px;
     position: absolute;
     top: 13px;
@@ -20,7 +48,7 @@
 
   .code-block__code {
     font-size: 16px;
-    line-height: 1.5em;
+    line-height: 1.5;
     margin-top: 25px;
     display: block;
   }
