--- a/src/components/CodeBlock/CodeBlock.scss
+++ b/src/components/CodeBlock/CodeBlock.scss
@@ -7,37 +7,9 @@
   box-shadow: 0px 1.5px 0px 2px $colorPrimary;
   -webkit-box-shadow: 0px 1.5px 0px 2px $colorPrimary;
   -moz-box-shadow: 0px 1.5px 0px 2px $colorPrimary;
-  padding: 35px 35px 30px 35px;
+  padding: 35px 35px 30px;
   position: relative;
   min-width: 360px;
-
-  .code-block__btn {
-    opacity: 90%;
-    position: absolute;
-    top: 13px;
-    right: 15px;
-  }
-
-  &.code-block--dark {
-    color: $colorWhite;
-    background-color: $colorPrimaryDark;
-    box-shadow: 0px 1.5px 0px 2px $colorPrimaryDark;
-    -webkit-box-shadow: 0px 1.5px 0px 2px $colorPrimaryDark;
-    -moz-box-shadow: 0px 1.5px 0px 2px $colorPrimaryDark;
-
-    .code-block__btn {
-      opacity: 100%;
-      color: $colorPrimaryDark;
-      background-color: $colorWhite;
-
-      &:hover {
-        opacity: 90%;
-        color: $colorWhite;
-        background-color: $colorPrimaryDark;
-        border-color: $colorWhite;
-      }
-    }
-  }
 
   .code-block__label {
     font-size: 11.5px;
@@ -46,10 +18,37 @@
     left: 15px;
   }
 
+  .code-block__toggle {
+    font-weight: 500;
+    position: absolute;
+    top: 13px;
+    right: 15px;
+  }
+
   .code-block__code {
     font-size: 16px;
     line-height: 1.5;
     margin-top: 25px;
     display: block;
+  }
+}
+
+.code-block--dark {
+  color: $colorWhite;
+  background-color: $colorPrimaryDark;
+  box-shadow: 0px 1.5px 0px 2px $colorPrimaryDark;
+  -webkit-box-shadow: 0px 1.5px 0px 2px $colorPrimaryDark;
+  -moz-box-shadow: 0px 1.5px 0px 2px $colorPrimaryDark;
+
+  .code-block__toggle {
+    color: $colorPrimaryDark;
+    background-color: $colorWhite;
+
+    &:hover {
+      opacity: 90%;
+      color: $colorWhite;
+      background-color: $colorPrimaryDark;
+      border-color: $colorWhite;
+    }
   }
 }
