--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -6,7 +6,20 @@ body {
 }
 
 h1 {
-  font-size: 60px;
+  font-size: 70px;
   font-weight: 500;
   letter-spacing: -0.02em;
+}
+
+h2 {
+  font-size: 40px;
+  font-weight: 600;
+}
+
+h3 {
+  font-size: 32px;
+  font-weight: 400;
+  text-transform: uppercase;
+  word-spacing: 8px;
+  line-height: 1.4;
 }
