add ColorPicker with styles

--- a/src/styles/settings/_variables.scss
+++ b/src/styles/settings/_variables.scss
@@ -11,5 +11,7 @@ $colorDangerDark: hsl(0, 100%, 45%);
 
 $colorWhite: #fff;
 $colorBlack: #000;
+$colorGrey: hsla(0, 0%, 0%, 0.274);
 
 $fontPrimary: "Instrument Sans", sans-serif;
+$fontSecondary: monospace;
