--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,9 +3,9 @@
 .main-header {
   background-color: $colorWhite;
   text-align: center;
-  padding: 70px 20px 42px;
+  padding: 59px 0 64px;
   margin: 0 auto;
-  width: 90%;
+  width: 100%;
 
   .main-header__accent {
     color: $colorWhite;
@@ -18,7 +18,7 @@
 
   .main-header__subtitle {
     color: $colorPrimaryLight;
-    font-size: 17px;
+    font-size: 16px;
     line-height: 1.7;
     margin-top: 30px;
   }
