--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,8 +9,9 @@ body {
   background-size: 35px 35px;
 }
 
-.container {
+main.container {
   margin: 0 auto;
-  width: 90%;
+  width: 100%;
   max-width: 1200px;
+  padding-bottom: 120px;
 }
