--- a/src/components/CodeThemeEditor/CodeColorCustomizer/CodeColorCustomizer.scss
+++ b/src/components/CodeThemeEditor/CodeColorCustomizer/CodeColorCustomizer.scss
@@ -1,6 +1,17 @@
+@use "../../../styles/settings/mixins" as *;
+
 .color-customizer {
   width: 33%;
   text-align: right;
+
+  @include tablet {
+    width: 38%;
+  }
+
+  @include mobile {
+    width: 90%;
+    text-align: center;
+  }
 
   &__title {
     margin-top: 5px;
@@ -11,6 +22,10 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+
+    @include mobile {
+      align-items: center;
+    }
 
     .color-picker:first-child {
       border-top: transparent;
