--- a/src/components/CodeThemeEditor/CodeThemeEditor.scss
+++ b/src/components/CodeThemeEditor/CodeThemeEditor.scss
@@ -1,7 +1,10 @@
+@use "../../styles/settings/mixins" as *;
+
 .theme-editor {
   &__title {
     margin-top: 15px;
     text-align: center;
+    padding: 0 15px;
   }
 
   &__workspace {
@@ -10,5 +13,26 @@
     align-items: start;
     gap: 40px;
     margin-top: 45px;
+
+    @include tablet {
+      flex-wrap: wrap;
+
+      .code-block {
+        order: 1;
+      }
+    }
+
+    @include mobile {
+      margin-top: 25px;
+
+      .code-block {
+        order: 0;
+        min-width: 50px;
+
+        .code-block__code {
+          font-size: 14px;
+        }
+      }
+    }
   }
 }
