--- a/src/components/CodeThemeEditor/CodeColorRandomizer/CodeColorRandomizer.scss
+++ b/src/components/CodeThemeEditor/CodeColorRandomizer/CodeColorRandomizer.scss
@@ -1,5 +1,16 @@
+@use "../../../styles/settings/mixins" as *;
+
 .color-randomizer {
   width: 33%;
+
+  @include tablet {
+    width: 38%;
+  }
+
+  @include mobile {
+    width: 90%;
+    text-align: center;
+  }
 
   .color-randomizer__title {
     margin-top: 5px;
@@ -12,6 +23,10 @@
     flex-wrap: wrap;
     column-gap: 15px;
     row-gap: 20px;
+
+    @include mobile {
+      justify-content: center;
+    }
   }
 
   .btn--primary {
