--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,4 +1,5 @@
 @use "../settings/variables";
+@use "../settings/mixins" as *;
 
 body {
   color: variables.$colorPrimary;
@@ -22,4 +23,18 @@ h3 {
   text-transform: uppercase;
   word-spacing: 8px;
   line-height: 1.4;
+}
+
+@include mobile {
+  h1 {
+    font-size: 45px;
+  }
+
+  h2 {
+    font-size: 35px;
+  }
+
+  h3 {
+    font-size: 25px;
+  }
 }
