--- a/src/components/SavedThemes/SavedTheme/SavedTheme.scss
+++ b/src/components/SavedThemes/SavedTheme/SavedTheme.scss
@@ -1,34 +1,37 @@
-  .saved-theme {
-    &__header {
-      padding: 0 15px 10px;
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-end;
+@use "../../../styles/settings/variables" as *;
 
-      &__title {
-        font-size: 28px;
-        line-height: 1.1;
-      }
+.saved-theme {
+  &__header {
+    padding: 0 15px 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
 
-      &__delete-btn {
-        padding: 3px 8px;
-        font-size: 14px;
-      }
+  &__title {
+    font-size: 28px;
+    line-height: 1.1;
+  }
+
+  &__edit-btn,
+  &__delete-btn {
+    padding: 3px 8px;
+    margin-left: 10px;
+  }
+
+  .code-block {
+    min-width: 200px;
+    padding: 15px 35px 20px 20px;
+    margin-bottom: 15px;
+
+    &__label {
+      font-size: 10px;
+      left: auto;
+      right: 15px;
     }
 
-    .code-block {
-      min-width: 200px;
-      padding: 15px 35px 20px 20px;
-      margin-bottom: 15px;
-
-      &__label {
-        font-size: 10px;
-        left: auto;
-        right: 15px;
-      }
-
-      &__code {
-        font-size: 14px;
-      }
+    &__code {
+      font-size: 14px;
     }
   }
+}
