--- a/src/components/CodeThemeEditor/CodeThemeEditor.scss
+++ b/src/components/CodeThemeEditor/CodeThemeEditor.scss
@@ -2,7 +2,10 @@
 
 .theme-editor {
   padding-top: 15px;
-  scroll-margin-top: 25px;
+  scroll-margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   &__title {
     text-align: center;
@@ -14,7 +17,7 @@
     justify-content: center;
     align-items: start;
     gap: 40px;
-    margin-top: 45px;
+    margin-top: 25px;
 
     @include tablet {
       flex-wrap: wrap;
