add “Generate Rules for VS Code” functionality with modal and copyable code block

--- a/src/styles/settings/_variables.scss
+++ b/src/styles/settings/_variables.scss
@@ -12,6 +12,7 @@ $colorDangerDark: hsl(0, 100%, 45%);
 $colorWhite: #fff;
 $colorBlack: #000;
 $colorGrey: hsla(0, 0%, 0%, 0.274);
+$colorGreyText: hsl(0, 0%, 85%);
 
 $fontPrimary: "Instrument Sans", sans-serif;
 $fontSecondary: monospace;
