--- a/src/components/SavedThemes/SavedTheme/SavedTheme.scss
+++ b/src/components/SavedThemes/SavedTheme/SavedTheme.scss
@@ -1,6 +1,8 @@
 @use "../../../styles/settings/variables" as *;
 
 .saved-theme {
+  width: 275px;
+
   &__header {
     padding: 0 15px 10px;
     display: flex;
